--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-alpha3'
     implementation 'androidx.cardview:cardview:1.0.0-alpha3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
+
 }
