Mejora de estructura de programacion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ClickMiMaratonActivity"></activity>
+        <activity
+            android:name=".ClickInMiMaratonActivity"
+            android:parentActivityName=".MaratonActivity"></activity>
+        <activity
+            android:name=".ClickMiMaratonActivity"
+            android:parentActivityName=".MiMaratonActivity" />
         <activity
             android:name=".MiMaratonActivity"
             android:parentActivityName=".MainActivity" />
@@ -25,7 +30,9 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait" />
-        <activity android:name=".ClickMaratonActivity" />
+        <activity
+            android:name=".ClickMaratonActivity"
+            android:parentActivityName=".MaratonActivity" />
         <activity
             android:name=".MaratonActivity"
             android:parentActivityName=".MainActivity" />
@@ -56,11 +63,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
