--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,5 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0-alpha3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.lecho:hellocharts-android:v1.5.8'
-
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
 }
