--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,8 @@
             android:name=".MiInscripcionActivity"
             android:parentActivityName=".MainActivity"></activity>
         <activity
-            android:name=".ClickInMiMaratonActivity"
-            android:parentActivityName=".MaratonActivity" />
-        <activity
             android:name=".ClickMiMaratonActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:parentActivityName=".MiMaratonActivity" />
         <activity
             android:name=".MiMaratonActivity"
@@ -27,9 +25,6 @@
             android:label="@string/title_activity_maps"
             android:exported="true"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
         </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -77,7 +72,12 @@
             android:enabled="true"
             android:exported="true"
             android:foregroundServiceType="location" />
+        <receiver
+            android:name=".MapsActivity$MyReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
     </application>
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -85,7 +85,12 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 </manifest>
