--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SettingsActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:parentActivityName=".ProfileActivity" />
         <activity android:name=".ClickPostActivity" />
         <activity android:name=".LoginActivity" />
@@ -58,6 +59,7 @@
         </activity>
         <activity
             android:name=".SetupActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
