--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,6 @@ repositories {
 
 dependencies {
 
-    //implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.5.0'implementation project(':mapbox-android-sdk-9.5.0')
-    //implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
@@ -50,6 +48,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-alpha3'
     implementation 'androidx.cardview:cardview:1.0.0-alpha3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-   // implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    //implementation project(':MPChartLib')
+
 }
