--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ repositories {
 
 dependencies {
 
+    implementation fileTree(dir:'libs', include:['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
@@ -50,6 +51,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    //implementation project(':MPChartLib')
+    implementation 'com.android.volley:volley:1.1.1'
 
 }
